# 2025_llm_comp_main

./: .gitignore  analyze_token_length.py  inspect_xml_errors.py  main.py  pyproject.toml  validate_dataset_format.py
daily_note/: 2026-02-07_evaluation_setup.md  2026-02-08_training_setup.md  dataset_analysis.md  format_validation_report.md  token_length_analysis.md
datasets/daichira__structured-3k-mix-sft/: README.md
datasets/daichira__structured-5k-mix-sft/: .gitattributes  README.md
datasets/daichira__structured-hard-sft-4k/: .gitattributes  LICENSE  README.md
datasets/u-10bei__structured_data_with_cot_dataset/: README.md
datasets/u-10bei__structured_data_with_cot_dataset_512/: README.md
datasets/u-10bei__structured_data_with_cot_dataset_512_v2/: README.md
datasets/u-10bei__structured_data_with_cot_dataset_512_v4/: .gitattributes  README.md  structured_data_with_cot_dataset_512_v4_test.jsonl  structured_data_with_cot_dataset_512_v4_validation.jsonl
datasets/u-10bei__structured_data_with_cot_dataset_512_v5/: .gitattributes  README.md  structured_data_with_cot_dataset_512_v5_test.jsonl  structured_data_with_cot_dataset_512_v5_validation.jsonl
new_content/: stage1.env  stage2.env  stage3.env  train.py
official_content/: TRAINING_GUIDE.md  auto_eval_after_train.sh  download_dataset.py  dpo_stage1.env  dpo_stage2.env  evaluation.py  execution.env  generate_README.py  mlflow_ui.sh  stage1.env  stage2.env  stage3.env  train.py  train_dpo.py  upload_model_to_hf.py
outputs/: inference_base.json
scripts/: README.md  init-setup.sh  launch_dpo.sh  launch_parallel_stages.sh  launch_v2_after_v1.sh  merge_adapters.sh  merge_and_eval.py  merge_explore.py  mig_run.sh  run_eval.sh  setup_eval.sh  setup_mig.sh  setup_train.sh  switch_env.sh
src/: README.md  app.py  start_server.sh
unsloth_compiled_cache/: UnslothBCOTrainer.py  UnslothCPOTrainer.py  UnslothDPOTrainer.py  UnslothSFTTrainer.py  UnslothXPOTrainer.py
(+18 files in other folders)
